third_party/WebKit/WebCore/html/TimeRanges.h
@@ -28,11 +28,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define TimeRanges_h
 
 #include "ExceptionCode.h"
+
+#include <algorithm>
 #include <wtf/PassRefPtr.h>
 #include <wtf/RefCounted.h>
 #include <wtf/Vector.h>
-
-using namespace std;
 
 namespace WebCore {
 
@@ -91,8 +91,8 @@ private:
         {
             Range ret;
 
-            ret.m_start = min(m_start, range.m_start);
-            ret.m_end = max(m_end, range.m_end);
+            ret.m_start = std::min(m_start, range.m_start);
+            ret.m_end = std::max(m_end, range.m_end);
 
             return ret;
         }
